# tensor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/tensor-cpi/: Cargo.toml
crates/tensor-cpi/src/: lib.rs  northtail.rs  percolator.rs  sigma.rs  sovereign.rs  zk_credit.rs
crates/tensor-intents/: Cargo.toml
crates/tensor-intents/src/: lib.rs
crates/tensor-math/: Cargo.toml
crates/tensor-math/src/: lib.rs
crates/tensor-solver/: Cargo.toml
crates/tensor-solver/src/: lib.rs
crates/tensor-types/: Cargo.toml
crates/tensor-types/src/: lib.rs
programs/tensor-margin/: Cargo.toml
programs/tensor-margin/src/: lib.rs
programs/tensor-margin/src/errors/: mod.rs
programs/tensor-margin/src/instructions/: cancel_intent.rs  close_perp.rs  compute_margin.rs  compute_margin_oracle.rs  create_margin_account.rs  deposit_collateral.rs  execute_intent.rs  execute_spot_swap.rs  initialize_config.rs  liquidate.rs  mod.rs  open_option.rs  open_perp.rs  refresh_identity.rs  refresh_zk_credit.rs  register_market.rs  submit_intent.rs  update_mark_price.rs  update_mark_price_oracle.rs  withdraw_collateral.rs
programs/tensor-margin/src/state/: config.rs  intent.rs  margin_account.rs  market.rs  mod.rs
programs/tensor-margin/tests/: margin_scenarios.rs
