[workspace]
resolver = "2"
members = [
    "programs/*",
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"
authors = ["Tensor Protocol"]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "4.0"
spl-token-2022 = "3.0.3"
spl-associated-token-account = "3.0.3"
borsh = "0.10.4"
bytemuck = { version = "1.14.0", features = ["derive", "min_const_generics"] }

# Pin blake3 < 1.8.3 to avoid constant_time_eq 0.4.x (edition 2024 / rustc 1.85+).
# solana-program pulls blake3 ^1.5; 1.8.3 bumped to constant_time_eq 0.4.2 which
# requires a newer rustc than the Solana SBF toolchain provides.
blake3 = ">=1.5.0, <1.8.3"

# Internal crates — default-features = false at workspace level allows member
# crates to control feature activation via their own Cargo.toml.
tensor-types = { path = "crates/tensor-types", default-features = false }
tensor-math = { path = "crates/tensor-math", default-features = false }
tensor-cpi = { path = "crates/tensor-cpi" }
tensor-intents = { path = "crates/tensor-intents", default-features = false }
tensor-solver = { path = "crates/tensor-solver", default-features = false }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
